--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-  max-width: 1600px;
-  margin: auto;
-}
 :root {
   --primary-text-color: #212121;
   --special-color: #2196f3;
@@ -147,7 +143,8 @@ ul {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1600px;
 }
 .header__hero-title {
   color: var(--color-light);
@@ -298,7 +295,7 @@ ul {
   color: var(--color-light);
 }
 .block {
-  background-color: var(--color-background);
+  background-color: var(--color-light);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -383,6 +380,10 @@ ul {
   margin-bottom: -30px;
   margin-right: -30px;
 }
+.main__information-project-item:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .main__information-project-item {
   width: calc(100% / 3 -30px);
   margin-bottom: 30px;
@@ -402,6 +403,7 @@ ul {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--primary-text-color);
 }
 .detail {
   font-size: 16px;
